[project]
name = "agent-qa"
version = "0.1.0"
description = "Agent QA — automated reliability reports for public MCP endpoints (OKX.AI A2MCP ASP)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Agent QA" }]
dependencies = [
    "mcp>=1.26.0",
]

[project.optional-dependencies]
# Web + MCP wrapper layers (Steps 2-3). Kept optional so the core engine
# installs and tests with a minimal footprint.
service = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "fastmcp>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[project.scripts]
agent-qa = "core.cli:main"
agent-qa-serve = "service.app:run"
agent-qa-mcp = "mcp_server.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "service", "mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
